src/commonMain/resources/index.css
/* ... */
/* Large screens */
@media (min-width: 80em) {
    .large-Grid--fit > .Grid-cell {
        flex: 1;
    }
    .large-Grid--full > .Grid-cell {
        flex: 0 0 100%;
    }
    .large-Grid--1of2 > .Grid-cell {
        flex: 0 0 50%
    }
    .large-Grid--1of3 > .Grid-cell {
        flex: 0 0 33.3333%
    }
    .large-Grid--1of4 > .Grid-cell {
        flex: 0 0 25%
    }
}

/*
	Hack to remove background from Mobile Safari.
	Can't use it globally since it destroys checkboxes in Firefox
*/
@media screen and (-webkit-min-device-pixel-ratio: 0) {
    .toggle-all,
    .todo-list li .toggle {
        background: none;
    }

    .todo-list li .toggle {
        height: 40px;
    }
}

@media (max-width: 430px) {
    .footer {
        height: 50px;
    }

    .filters {
        bottom: 10px;
    }
}

.title-description {
    display: flex;
    flex-direction: column;
    width: 100%;
    margin-top: 4px;
}

